--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <h2>
                 <i class="fa-solid fa-location-dot"></i>
                 <span id="city">Florianopólis</span>
-                <img src="" alt="Bandeira do país" id="coutry">
+                <img src="https://countryflagsapi.com/png/br" alt="Bandeira do país" id="coutry"/>
             </h2>
             <p id="temperature"><span>38</span>&deg;C</p>
             <div id="description-container">
                 <p id="description">Nublado</p>
-                <img src="" alt="Condições do tempo" id="weather-icon">
+                <img src="http://openweathermap.org/img/wn/01d.png" alt="Condições do tempo" id="weather-icon">
             </div>
             <div id="details-container"></div>
             <p id="umidity">
