--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pr-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clima Agora!</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <script src="js/scripts.js" defer></script>
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <title>Clima & Tempo</title>
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -20,38 +14,43 @@
         <div class="form">
             <h3>Confira o clima de uma cidade:</h3>
             <div class="form-input-container">
-                <input type="text" placeholder="Digite o nome da cidade" id="city-input">
+                <input type="text" placeholder="Digite o nome da cidade." id="city-input">
                 <button id="search">
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-magnifying-glass">
+
+                    </i>
                 </button>
+
+
             </div>
         </div>
-        <div id="weather-data">
+        <div id="weather-data" class="hide">
             <h2>
                 <i class="fa-solid fa-location-dot"></i>
-                <span id="city">Florianopólis</span>
-                <img 
-                    src="https://countryflagsapi.com/png/br" 
-                    alt="Bandeira do país" 
-                    id="coutry"
-                />
+                <span id="city"></span>
+                <img src="" id="country" crossorigin="anonymous">
             </h2>
-            <p id="temperature"><span>38</span>&deg;C</p>
+            <p id="temperature"><span></span>&deg;</p>
             <div id="description-container">
-                <p id="description">Nublado</p>
-                <img src="http://openweathermap.org/img/wn/01d.png" alt="Condições do tempo" id="weather-icon">
+                <p id="description"></p>
+                <img src="" alt="Condições do Tempo" id="weather-icon">
             </div>
-            <div id="details-container"></div>
-            <p id="umidity">
-                <i class="fa-solid fa-droplet"></i>
-                <span>48%</span>
-            </p>
-            <p id="wind">
-                <i class="fa-solid fa-wind"></i>
-                <span>3km/h</span>
-            </p>
+            <div id="details-container">
+                <p id="humidity">
+                    <i class="fa-solid fa-droplet"></i>
+                    <span></span>
+                </p><p id="wind">
+                    <i class="fa-solid fa-wind"></i>
+                    <span></span>
+                </p>
+            </div>
         </div>
     </div>
     
+
+
+    <script src="./assets/js/scripts.js"></script>
+
+
 </body>
 </html>
